# io-tools

./: .gitignore  Makefile  Pipfile  README.md  logging_cfg.yaml  mkdocs.yml  pyproject.toml  run_io_template_dev.bat  settings.io_template.toml  setup.cfg
.github/workflows/: README.md  standards.yml  test_development.yml  test_production.yml
docs/: README.md  index.md  library_api_documentation.md  library_configuration.md  library_installation.md  library_requirements.md  release_history.md  release_notes.md  release_schedule.md
docs/css/: mkdocstrings.css
docs/img/: README.md
resources/: README.md
scripts/: README.md
site/: 404.html  LICENSE.html  index.html  library_api_documentation.html  library_configuration.html  library_installation.html  library_requirements.html  objects.inv  release_history.html  release_notes.html  release_schedule.html  sitemap.xml
site/img/: index.html
site/search/: search_index.json
src/: README.md  launcher.py  setup.py
src/io_template/: __init__.py  io_config.py  io_glob.py  io_utils.py
src/io_tools/: __init__.py  io_config.py  io_glob.py  io_glob.pyi  io_utils.pyi
tests/: README.md  __init__.py  conftest.py  test_io_utils_cover.py
